[#1270] Properly handle Optional in entity view annotation processor